<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/displayText"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_margin="12dp"
        android:autofillHints="0"
        android:inputType="none"
        android:textSize="30sp"
        android:gravity="right"
        tools:ignore="LabelFor" />

    <TableLayout
        android:id="@+id/tableButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/displayText"
        android:stretchColumns="*"
        android:layout_margin="18dp"
        >
        <TableRow>
            <Button android:id="@+id/Clearbtn" style="?android:attr/buttonBarButtonStyle" android:text="@string/Clear" android:textSize="30sp" android:layout_weight="2"/>
        </TableRow>

        <TableRow>
            <Button android:id="@+id/number7" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Seven" android:layout_weight="2"/>
            <Button android:id="@+id/number8" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Eight" android:layout_weight="2"/>
            <Button android:id="@+id/number9" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Nine" android:layout_weight="2"/>
            <Button android:id="@+id/divider" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Divider" android:layout_weight="2"/>
        </TableRow>

        <TableRow>
            <Button android:id="@+id/number6" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Six" android:layout_weight="2"/>
            <Button android:id="@+id/number5" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Five" android:layout_weight="2"/>
            <Button android:id="@+id/number4" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Four" android:layout_weight="2"/>
            <Button android:id="@+id/mulitper" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Multiplier" android:layout_weight="2"/>
        </TableRow>

        <TableRow style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/number3"
                android:layout_width="100dp"
                android:layout_height="120dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Three"
                android:layout_weight="2" />

            <Button
                android:id="@+id/number2"
                android:layout_width="100dp"
                android:layout_height="120dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Two"
                android:layout_weight="2" />

            <Button
                android:id="@+id/number1"
                android:layout_width="100dp"
                android:layout_height="120dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/One"
                android:layout_weight="2" />

            <Button
                android:id="@+id/substr"
                android:layout_width="100dp"
                android:layout_height="120dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/substration" android:layout_weight="2"/>
        </TableRow>
        <TableRow>
            <Button android:id="@+id/number0" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Zero" android:layout_weight="2"/>
            <Button android:id="@+id/dot" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Dot" android:layout_weight="2"/>
            <Button android:id="@+id/equals" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Equals" android:layout_weight="2"/>
            <Button android:id="@+id/addition" android:layout_width="100dp"
                android:layout_height="120dp"  style="?android:attr/buttonBarButtonStyle" android:text="@string/Add" android:layout_weight="2"/>
        </TableRow>


    </TableLayout>



</RelativeLayout>